--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="d-flex justify-center">
                                     <img src="img/user.png" alt="user photo">
                                     <div>
-                                        <h5>Jorge Peterete</h5>
+                                        <h5>Jorge</h5>
                                         <div class="qualification">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
